fixed datepicker day cell spacing

--- a/src/app/components/shared/date-input/dayPicker.less
+++ b/src/app/components/shared/date-input/dayPicker.less
@@ -87,6 +87,9 @@
 .DayPicker-Day {
     font-weight: 600;
     vertical-align: middle;
+    width: 43px;
+    height: 39px;
+    padding: 0;
 
     &:focus {
         outline: none;
